<resources>
    <string name="app_name">KotlinCalc</string>
    <string name="my_title">GG Standard Calculator</string>

    <string name="btn_percent">%</string>
    <string name="btn_clear_entry">CE</string>
    <string name="btn_clear_all">C</string>
    <string name="btn_backspace">⌫</string>
    <string name="btn_fraction">1/x</string>
    <string name="btn_exponent">x²</string>
    <string name="btn_root">√x</string>
    <string name="btn_divide">÷</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_times">×</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_plus_minus">±</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equals">=</string>

</resources>