<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="14dp"
        android:orientation="vertical"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_entry"
        app:layout_constraintVertical_bias="1.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned"
            >

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_percent"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/btn_clear_entry"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/btn_clear_entry"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_clear_all"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/btn_clear_all"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/btn_backspace"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned">

            <Button
                android:id="@+id/btn_fraction"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_fraction"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_exponent"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_exponent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_root"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_root"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_divide"
                android:textColor="@color/accent"
                app:cornerRadius="0dp"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_7"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_8"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_9"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_times"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/btn_times"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:textColor="@color/accent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned">

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_4"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_5"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_6"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_minus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_minus"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:textColor="@color/accent"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned">

            <Button
                android:id="@+id/btn_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_1"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_2"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_3"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_plus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_plus"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:textColor="@color/accent"
                android:background="@color/primary"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flow_wrapMode="aligned">

            <Button
                android:id="@+id/btn_plus_minus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_plus_minus"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_0"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />

            <Button
                android:id="@+id/btn_dot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_text"
                android:text="@string/btn_dot"
                android:textColor="@color/accent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp" />
            <Button
                android:id="@+id/btn_equals"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_equals"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="53dp"
                android:textColor="@color/accent"
                android:background="@color/white"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_box"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/my_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:padding="8dp"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bg_entry"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:padding="8dp"
            android:autoSizeTextType="uniform"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/txt_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:scrollbars="vertical"
            android:textAlignment="textEnd"
            android:textColor="@color/primary_text"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>